# supletivo-data-hackers-AWS-CDK

./: .checkov  .checkov.baseline  .coverage  .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  cdk.json  make_request.py  pyproject.toml
src/: config.py  stack.py
src/demo_function/: .dockerignore  Dockerfile  lambda_function.py  pyproject.toml
src/demo_function/demo_function/: index.py
src/demo_function/tests/: test_index.py
tests/: conftest.py
tests/unit/: test_stack.py
